--- a/src/components/Testimonials.css
+++ b/src/components/Testimonials.css
@@ -19,3 +19,67 @@
   text-transform: capitalize;
   word-spacing: 8px;
 } 
+
+.faq-section{
+  padding: 20px;
+  font-family: Arial, sans-serif;
+  max-width: 700px;
+  margin: 0 auto;
+  background-color: #f9f9f9;
+ 
+}
+.faq-section p{
+  text-align: center;
+  font-style: italic;
+  font-size: 10px;
+}
+
+.faq-question{
+  font-size: 18px;
+  margin: 10px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #f9f9f9;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
+.faq-question:hover{
+  border: 4px solid #ddd;
+  transition: .65s;
+  background-color: #eef
+}
+.arrow{
+  color: #007BFF;
+}
+.faq-answer {
+  font-size: 16px;
+  color: #555;
+  padding: 10px;
+  background-color: #f3f3f3;
+  border-left: 3px solid #007BFF;
+}
+.refer-experts{
+  text-align: center;
+  margin-top: 20px;
+}
+.refer-experts p{
+  font-size: 14px;
+  font-style: italic;
+  margin-bottom: 5px;
+  font-weight: bold;
+  color: gray;
+}
+.refer-experts button{
+  padding: 10px 6px;
+  color: white;
+  background-color: rgb(14, 13, 13);
+  margin-top: 10px;
+  border: none;
+  transition: .65s;
+}
+.refer-experts button:hover{
+  background-color: rgb(82, 81, 81);
+  color: white;
+}
