--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -26,6 +26,11 @@ header{
   justify-content: space-between;
   align-items: center;
 }
+@media screen and (max-width: 600px){
+  .navbar{
+    flex-direction: column;
+  }
+}
 .left-header{
   display: flex;
 }
