--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -5,11 +5,37 @@ body{
 }
 .home-page{
   padding: 80px 20px;
+  background-image: url('public/images/pic2.jpg');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: white;
+  padding: 280px 20px;
+  line-height: 1.3;
+  text-align: center;
+  word-spacing: 2px;
 }
+.home-page h1{
+  font-size:  40px;
+}
+.home-page p {
+  font-size: 30px;
+}
+
 .firstPara{
   text-align: center;
   margin-top: 15px;
   font-family: 'Times New Roman', Times, serif;
+}
+.home-btn{
+  padding: 8px 14px;
+  cursor: pointer;
+  border: none;
+  transition: .65s;
+  border-radius: 5px;
+}
+.home-btn:hover{
+  filter: brightness(.88);
 }
 .about-contents{
   display: flex;
@@ -90,6 +116,10 @@ body{
   transition: .65s;
   border: none;
 }
+.feature-card:hover .explore-button {
+  background-color: rgb(231, 231, 231);
+  color: black;
+}
 .feature-card h4{
   margin-bottom: 0.5rem;
 }
@@ -100,6 +130,8 @@ body{
   color: white;
   border: none;
   border-radius: 3px;
+  cursor: pointer;
+  transition: .65s;
 }
 
 /* FAQ SECTION */
@@ -161,6 +193,7 @@ body{
   margin-top: 10px;
   border: none;
   transition: .65s;
+  cursor: pointer;
 }
 .refer-experts button:hover{
   background-color: rgb(82, 81, 81);
