--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,102 +1,145 @@
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
 
-header{
-  padding: 20px;
-  background-color: #007BFF;
-  color: white;
-  height: 90px;
+.active {
+  background-color: #1d4ed8;
+  border-radius: 12px;
+}
+nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #0f172a;
+  /* height: 90px; */
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   z-index: 1000;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-}
-.logo a{
-  font-size: 20px;
-  text-decoration: none;
-  color: white;
-}
-@media screen and (max-width: 600px){
-  .logo a{
-    font-size: 14px;
-  }
-}
-.navbar{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  text-transform: capitalize;
-}
-/* @media screen and (max-width: 600px){
-  .navbar{
-    flex-direction: column;
-  }
-} */
-.left-header{
-  display: flex;
-}
-.left-header a{
-  padding: 10px;
-  text-decoration: none;
-  font-size: 17px;
-  color: white;
-}
-@media screen and (max-width: 600px){
-  .left-header a{
-    font-size: 14px;
-  }
-}
-.left-header a::after{
-  content: '';
-  display: block;
-  width: 0;
-  height: 3px;
-  background-color: cyan;
-  transition: .65s;
-}
-.left-header a:hover::after{
-  width: 100%;
-}
-.left-header a:hover{
-  color: cyan;
+
 }
 
-/* RIGHT HEADER */
-.navbar-auth{
+nav .title{
+  text-decoration: none;
+  font-size: 1.4rem;
+  color: white;
+  margin: 1rem;
+  font-weight: bold;
+}
+
+nav ul {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
+  /* gap: 20px; */
 }
-.navbar-auth button {
-  padding: 7px 12px;
-  border: none;
-  margin: 3px;
-  border-radius: 4px;
-  background-color: lightgray;
-  color: white;
-  /* margin-left: 1rem;
-  padding: 0.5rem 1rem;
-  border: none;
-  background-color: #28A745;
-  color: white;
-  border-radius: 5px;
-  cursor: pointer; */
+
+nav ul li {
+  list-style-type: none;
+  
 }
-@media screen and (max-width: 600px){
-  .navbar-auth button{
-    padding: 7px;
+
+nav ul li a {
+  text-decoration: none;
+  display: block;
+  color: white;
+  font-size: 15px;
+  padding: 0.6rem;
+  margin: 0 0.5rem;
+}
+@media screen and (max-width: 850px) and (min-width: 600px) {
+  nav ul {
     font-size: 12px;
   }
 }
 
-.navbar-auth .signup-button {
-  background-color: lightblue; 
-  /* padding: 7px;  */
-  
-  
+nav ul li a:not(.active):hover{
+  background-color: #172554;
 }
 
+nav .menu {
+  position: absolute;
+  top: 0.75rem;
+  right: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 2.25rem;
+  height: 2rem;
+  display: none;
+}
+
+nav .menu span {
+  height: 0.4rem;
+  width: 100%;
+  background-color: white;
+  border-radius: 0.2rem;
+}
+
+@media screen and (max-width: 600px) {
+  nav .menu {
+    display: flex;
+    /* margin-bottom: 50rem; */
+  }
+
+  nav {
+    flex-direction: column;
+    align-items: start;
+  }
+
+  nav ul {
+    display: none;
+    flex-direction: column;
+    width: 100%;
+    margin-bottom: 0.25rem;
+  }
+ 
+
+  nav ul li {
+    width: 100%;
+    text-align: center;
+  }
+
+
+  nav ul li a {
+    margin: 0.2rem 0.5rem;
+  }
+
+}
+
+nav ul.open {
+  display: flex;
+}
+
+.navbar-auth{
+  display: flex;
+  gap: 10px;;
+  align-items: center;
+  /* flex-wrap: wrap; */
+}
+@media screen and (max-width: 600px) {
+  .navbar-auth {
+    justify-content: center;
+    flex-direction: column;
+    padding: 10px;
+  }
+}
+
+.navbar-auth button {
+  padding: 7px 12px;
+  border: none;
+  border-radius: 4px;
+  color: black;
+  margin-right: 0.5rem;
+  border: none;
+  cursor: pointer;
+}
+
+
 .navbar-auth button:hover {
-  opacity: 0.9;
+  opacity: 0.8;
 }
