--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -4,7 +4,6 @@ body{
 
 }
 .home-page{
-  padding: 80px 20px;
   background-image: url('public/images/pic2.jpg');
   background-position: center;
   background-size: cover;
@@ -24,15 +23,16 @@ body{
 
 .firstPara{
   text-align: center;
-  margin-top: 15px;
+  /* margin-top: 15px; */
   font-family: 'Times New Roman', Times, serif;
 }
 .home-btn{
-  padding: 8px 14px;
+  padding: 10px 36px;
   cursor: pointer;
   border: none;
-  transition: .65s;
+  transition: 0.55s;
   border-radius: 5px;
+  margin-top: 7px;
 }
 .home-btn:hover{
   filter: brightness(.88);
@@ -111,7 +111,7 @@ body{
 }
 .feature-card:hover{
   cursor: pointer;
-  background-color: #007BFF;
+  background-color: #1d4ed8;
   color: white;
   transition: .65s;
   border: none;
@@ -166,14 +166,14 @@ body{
   background-color: #eef
 }
 .arrow{
-  color: #007BFF;
+  color: #1d4ed8;
 }
 .faq-answer {
   font-size: 16px;
   color: #555;
   padding: 10px;
   background-color: #f3f3f3;
-  border-left: 3px solid #007BFF;
+  border-left: 3px solid #1d4ed8;
 }
 .refer-experts{
   text-align: center;
@@ -189,14 +189,14 @@ body{
 .refer-experts button{
   padding: 10px 6px;
   color: white;
-  background-color: rgb(14, 13, 13);
+  background-color: #0f172a !important;
   margin-top: 10px;
   border: none;
   transition: .65s;
   cursor: pointer;
 }
 .refer-experts button:hover{
-  background-color: rgb(82, 81, 81);
+  background-color: #000716 !important;
   color: white;
 }
 
@@ -229,10 +229,10 @@ body{
   transition: transform .45s ease;
 }
 .get-started{
-  background-color: #dba503;
+  background-color: #0f172a;
   color: white;
 }
 .cta-experts{
-  background-color: green;
+  background-color: #0f172a;
   color: white;
 }
